--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		
 		<section>
 			<h2>
-				Ciphertext
+				Ciphertext (copy + paste encrypted text in here)
 			</h2>
 			
-			<textarea id="ciphertext">
+			<textarea id="ciphertext" cols="200" rows="20">
 		
 			</textarea>
 			
@@ -32,6 +32,10 @@
 			
 			<button onclick="decipher()">
 				Click to Decipher 
+			</button>
+			
+			<button onclick="smartDecipher()">
+				Click to Smart Decipher 
 			</button>
 		</section>
 	
@@ -47,6 +51,50 @@
 		
 		//create alphabet array 
 		var alphabet = ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z"];
+		
+		//create key words (most common in alphabet + any useful names)
+		var keywords = [
+			"the", "be", "and", "to", "of",
+		];
+		
+		//smart filter 
+		function smartFilter(text){
+			//turn text into list of words 
+			var words = [];
+			
+			var startIndex = 0;
+			
+			for(let k = 0; k < text.length; k++){
+				//check for space 
+				if(text[k] == " "){
+					//new word - add last word to list 
+					words.push(text.substring(startIndex,k));
+					startIndex = k + 1;
+				} else if(k == text.length - 1){
+					words.push(text.substring(startIndex));
+				};
+			};
+			
+			//set keywords counter
+			var keywordsCounter = 0;
+			
+			//check words for key words 
+			for(let k = 0; k < words.length; k++){
+				//check for match 
+				for(let l = 0; l < keywords.length; l++){
+					if(words[k].toLowerCase() == keywords[l].toLowerCase()){
+						keywordsCounter ++;
+					};
+				};
+			};
+			
+			//check the keywords counter 
+			if(keywordsCounter >= 5){
+				return true;
+			} else {
+				return false;
+			};
+		};
 		
 		//shift letter 
 		function shiftCharacter(character,shift){
@@ -90,5 +138,21 @@
 			};
 		};
 		
+		//smart decipher 
+		function smartDecipher(){
+			//reset plaintext innerHTML
+			plaintext.innerHTML = "";
+			
+			//get text input 
+			for(let j = 1; j < 26; j++){
+				let newText = shiftString(ciphertext.value,j);
+				
+				if(smartFilter(newText)){
+					plaintext.innerHTML += "Shift " + j + ":";
+					plaintext.innerHTML += newText;
+					plaintext.innerHTML += "<br/><br/>";
+				};
+			};
+		};
 	</script>
 </html>
