--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
 		<a href="substitutionCipher.html">
 			Substitution Cipher
 		</a>
+		
+		<br/>
+		
+		<a href="transpositionCipherDecoder.html">
+			Transposition Cipher Decoder
+		</a>
 	</body>
 </html>
